--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Angel Palma <aepalma4712@gmail.com>
+Jhoan Rodriguez <jhoansebastian@msn.com>
